# serializer version: 1
# name: test_empty_response_returns_empty_list
  dict({
    'SE3': list([
    ]),
  })
# ---
# name: test_service_call
  dict({
    'SE3': list([
      dict({
        'end': '2024-11-05T00:00:00+00:00',
        'price': 250.73,
        'start': '2024-11-04T23:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T01:00:00+00:00',
        'price': 76.36,
        'start': '2024-11-05T00:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T02:00:00+00:00',
        'price': 73.92,
        'start': '2024-11-05T01:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T03:00:00+00:00',
        'price': 61.69,
        'start': '2024-11-05T02:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T04:00:00+00:00',
        'price': 64.6,
        'start': '2024-11-05T03:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T05:00:00+00:00',
        'price': 453.27,
        'start': '2024-11-05T04:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T06:00:00+00:00',
        'price': 996.28,
        'start': '2024-11-05T05:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T07:00:00+00:00',
        'price': 1406.14,
        'start': '2024-11-05T06:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T08:00:00+00:00',
        'price': 1346.54,
        'start': '2024-11-05T07:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T09:00:00+00:00',
        'price': 1150.28,
        'start': '2024-11-05T08:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T10:00:00+00:00',
        'price': 1031.32,
        'start': '2024-11-05T09:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T11:00:00+00:00',
        'price': 927.37,
        'start': '2024-11-05T10:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T12:00:00+00:00',
        'price': 925.05,
        'start': '2024-11-05T11:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T13:00:00+00:00',
        'price': 949.49,
        'start': '2024-11-05T12:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T14:00:00+00:00',
        'price': 1042.03,
        'start': '2024-11-05T13:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T15:00:00+00:00',
        'price': 1258.89,
        'start': '2024-11-05T14:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T16:00:00+00:00',
        'price': 1816.45,
        'start': '2024-11-05T15:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T17:00:00+00:00',
        'price': 2512.65,
        'start': '2024-11-05T16:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T18:00:00+00:00',
        'price': 1819.83,
        'start': '2024-11-05T17:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T19:00:00+00:00',
        'price': 1011.77,
        'start': '2024-11-05T18:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T20:00:00+00:00',
        'price': 835.53,
        'start': '2024-11-05T19:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T21:00:00+00:00',
        'price': 796.19,
        'start': '2024-11-05T20:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T22:00:00+00:00',
        'price': 522.3,
        'start': '2024-11-05T21:00:00+00:00',
      }),
      dict({
        'end': '2024-11-05T23:00:00+00:00',
        'price': 289.14,
        'start': '2024-11-05T22:00:00+00:00',
      }),
    ]),
  })
# ---
# name: test_service_call_for_price_indices[get_price_indices_for_date_15]
  dict({
    'SE3': list([
      dict({
        'end': '2025-07-05T22:15:00+00:00',
        'price': 43.57,
        'start': '2025-07-05T22:00:00+00:00',
      }),
      dict({
        'end': '2025-07-05T22:30:00+00:00',
        'price': 43.57,
        'start': '2025-07-05T22:15:00+00:00',
      }),
      dict({
        'end': '2025-07-05T22:45:00+00:00',
        'price': 43.57,
        'start': '2025-07-05T22:30:00+00:00',
      }),
      dict({
        'end': '2025-07-05T23:00:00+00:00',
        'price': 43.57,
        'start': '2025-07-05T22:45:00+00:00',
      }),
      dict({
        'end': '2025-07-05T23:15:00+00:00',
        'price': 36.47,
        'start': '2025-07-05T23:00:00+00:00',
      }),
      dict({
        'end': '2025-07-05T23:30:00+00:00',
        'price': 36.47,
        'start': '2025-07-05T23:15:00+00:00',
      }),
      dict({
        'end': '2025-07-05T23:45:00+00:00',
        'price': 36.47,
        'start': '2025-07-05T23:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T00:00:00+00:00',
        'price': 36.47,
        'start': '2025-07-05T23:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T00:15:00+00:00',
        'price': 35.57,
        'start': '2025-07-06T00:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T00:30:00+00:00',
        'price': 35.57,
        'start': '2025-07-06T00:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T00:45:00+00:00',
        'price': 35.57,
        'start': '2025-07-06T00:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T01:00:00+00:00',
        'price': 35.57,
        'start': '2025-07-06T00:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T01:15:00+00:00',
        'price': 30.73,
        'start': '2025-07-06T01:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T01:30:00+00:00',
        'price': 30.73,
        'start': '2025-07-06T01:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T01:45:00+00:00',
        'price': 30.73,
        'start': '2025-07-06T01:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T02:00:00+00:00',
        'price': 30.73,
        'start': '2025-07-06T01:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T02:15:00+00:00',
        'price': 32.42,
        'start': '2025-07-06T02:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T02:30:00+00:00',
        'price': 32.42,
        'start': '2025-07-06T02:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T02:45:00+00:00',
        'price': 32.42,
        'start': '2025-07-06T02:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T03:00:00+00:00',
        'price': 32.42,
        'start': '2025-07-06T02:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T03:15:00+00:00',
        'price': 38.73,
        'start': '2025-07-06T03:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T03:30:00+00:00',
        'price': 38.73,
        'start': '2025-07-06T03:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T03:45:00+00:00',
        'price': 38.73,
        'start': '2025-07-06T03:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T04:00:00+00:00',
        'price': 38.73,
        'start': '2025-07-06T03:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T04:15:00+00:00',
        'price': 42.78,
        'start': '2025-07-06T04:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T04:30:00+00:00',
        'price': 42.78,
        'start': '2025-07-06T04:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T04:45:00+00:00',
        'price': 42.78,
        'start': '2025-07-06T04:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T05:00:00+00:00',
        'price': 42.78,
        'start': '2025-07-06T04:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T05:15:00+00:00',
        'price': 54.71,
        'start': '2025-07-06T05:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T05:30:00+00:00',
        'price': 54.71,
        'start': '2025-07-06T05:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T05:45:00+00:00',
        'price': 54.71,
        'start': '2025-07-06T05:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T06:00:00+00:00',
        'price': 54.71,
        'start': '2025-07-06T05:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T06:15:00+00:00',
        'price': 83.87,
        'start': '2025-07-06T06:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T06:30:00+00:00',
        'price': 83.87,
        'start': '2025-07-06T06:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T06:45:00+00:00',
        'price': 83.87,
        'start': '2025-07-06T06:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T07:00:00+00:00',
        'price': 83.87,
        'start': '2025-07-06T06:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T07:15:00+00:00',
        'price': 78.8,
        'start': '2025-07-06T07:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T07:30:00+00:00',
        'price': 78.8,
        'start': '2025-07-06T07:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T07:45:00+00:00',
        'price': 78.8,
        'start': '2025-07-06T07:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T08:00:00+00:00',
        'price': 78.8,
        'start': '2025-07-06T07:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T08:15:00+00:00',
        'price': 92.09,
        'start': '2025-07-06T08:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T08:30:00+00:00',
        'price': 92.09,
        'start': '2025-07-06T08:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T08:45:00+00:00',
        'price': 92.09,
        'start': '2025-07-06T08:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T09:00:00+00:00',
        'price': 92.09,
        'start': '2025-07-06T08:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T09:15:00+00:00',
        'price': 104.92,
        'start': '2025-07-06T09:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T09:30:00+00:00',
        'price': 104.92,
        'start': '2025-07-06T09:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T09:45:00+00:00',
        'price': 104.92,
        'start': '2025-07-06T09:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T10:00:00+00:00',
        'price': 104.92,
        'start': '2025-07-06T09:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T10:15:00+00:00',
        'price': 72.5,
        'start': '2025-07-06T10:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T10:30:00+00:00',
        'price': 72.5,
        'start': '2025-07-06T10:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T10:45:00+00:00',
        'price': 72.5,
        'start': '2025-07-06T10:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T11:00:00+00:00',
        'price': 72.5,
        'start': '2025-07-06T10:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T11:15:00+00:00',
        'price': 63.49,
        'start': '2025-07-06T11:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T11:30:00+00:00',
        'price': 63.49,
        'start': '2025-07-06T11:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T11:45:00+00:00',
        'price': 63.49,
        'start': '2025-07-06T11:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T12:00:00+00:00',
        'price': 63.49,
        'start': '2025-07-06T11:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T12:15:00+00:00',
        'price': 91.64,
        'start': '2025-07-06T12:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T12:30:00+00:00',
        'price': 91.64,
        'start': '2025-07-06T12:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T12:45:00+00:00',
        'price': 91.64,
        'start': '2025-07-06T12:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T13:00:00+00:00',
        'price': 91.64,
        'start': '2025-07-06T12:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T13:15:00+00:00',
        'price': 111.79,
        'start': '2025-07-06T13:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T13:30:00+00:00',
        'price': 111.79,
        'start': '2025-07-06T13:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T13:45:00+00:00',
        'price': 111.79,
        'start': '2025-07-06T13:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T14:00:00+00:00',
        'price': 111.79,
        'start': '2025-07-06T13:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T14:15:00+00:00',
        'price': 234.04,
        'start': '2025-07-06T14:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T14:30:00+00:00',
        'price': 234.04,
        'start': '2025-07-06T14:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T14:45:00+00:00',
        'price': 234.04,
        'start': '2025-07-06T14:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T15:00:00+00:00',
        'price': 234.04,
        'start': '2025-07-06T14:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T15:15:00+00:00',
        'price': 435.33,
        'start': '2025-07-06T15:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T15:30:00+00:00',
        'price': 435.33,
        'start': '2025-07-06T15:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T15:45:00+00:00',
        'price': 435.33,
        'start': '2025-07-06T15:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T16:00:00+00:00',
        'price': 435.33,
        'start': '2025-07-06T15:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T16:15:00+00:00',
        'price': 431.84,
        'start': '2025-07-06T16:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T16:30:00+00:00',
        'price': 431.84,
        'start': '2025-07-06T16:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T16:45:00+00:00',
        'price': 431.84,
        'start': '2025-07-06T16:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T17:00:00+00:00',
        'price': 431.84,
        'start': '2025-07-06T16:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T17:15:00+00:00',
        'price': 423.73,
        'start': '2025-07-06T17:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T17:30:00+00:00',
        'price': 423.73,
        'start': '2025-07-06T17:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T17:45:00+00:00',
        'price': 423.73,
        'start': '2025-07-06T17:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T18:00:00+00:00',
        'price': 423.73,
        'start': '2025-07-06T17:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T18:15:00+00:00',
        'price': 437.92,
        'start': '2025-07-06T18:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T18:30:00+00:00',
        'price': 437.92,
        'start': '2025-07-06T18:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T18:45:00+00:00',
        'price': 437.92,
        'start': '2025-07-06T18:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T19:00:00+00:00',
        'price': 437.92,
        'start': '2025-07-06T18:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T19:15:00+00:00',
        'price': 416.42,
        'start': '2025-07-06T19:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T19:30:00+00:00',
        'price': 416.42,
        'start': '2025-07-06T19:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T19:45:00+00:00',
        'price': 416.42,
        'start': '2025-07-06T19:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T20:00:00+00:00',
        'price': 416.42,
        'start': '2025-07-06T19:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T20:15:00+00:00',
        'price': 414.39,
        'start': '2025-07-06T20:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T20:30:00+00:00',
        'price': 414.39,
        'start': '2025-07-06T20:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T20:45:00+00:00',
        'price': 414.39,
        'start': '2025-07-06T20:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T21:00:00+00:00',
        'price': 414.39,
        'start': '2025-07-06T20:45:00+00:00',
      }),
      dict({
        'end': '2025-07-06T21:15:00+00:00',
        'price': 396.38,
        'start': '2025-07-06T21:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T21:30:00+00:00',
        'price': 396.38,
        'start': '2025-07-06T21:15:00+00:00',
      }),
      dict({
        'end': '2025-07-06T21:45:00+00:00',
        'price': 396.38,
        'start': '2025-07-06T21:30:00+00:00',
      }),
      dict({
        'end': '2025-07-06T22:00:00+00:00',
        'price': 396.38,
        'start': '2025-07-06T21:45:00+00:00',
      }),
    ]),
  })
# ---
# name: test_service_call_for_price_indices[get_price_indices_for_date_60]
  dict({
    'SE3': list([
      dict({
        'end': '2025-07-05T23:00:00+00:00',
        'price': 43.57,
        'start': '2025-07-05T22:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T00:00:00+00:00',
        'price': 36.47,
        'start': '2025-07-05T23:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T01:00:00+00:00',
        'price': 35.57,
        'start': '2025-07-06T00:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T02:00:00+00:00',
        'price': 30.73,
        'start': '2025-07-06T01:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T03:00:00+00:00',
        'price': 32.42,
        'start': '2025-07-06T02:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T04:00:00+00:00',
        'price': 38.73,
        'start': '2025-07-06T03:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T05:00:00+00:00',
        'price': 42.78,
        'start': '2025-07-06T04:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T06:00:00+00:00',
        'price': 54.71,
        'start': '2025-07-06T05:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T07:00:00+00:00',
        'price': 83.87,
        'start': '2025-07-06T06:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T08:00:00+00:00',
        'price': 78.8,
        'start': '2025-07-06T07:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T09:00:00+00:00',
        'price': 92.09,
        'start': '2025-07-06T08:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T10:00:00+00:00',
        'price': 104.92,
        'start': '2025-07-06T09:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T11:00:00+00:00',
        'price': 72.5,
        'start': '2025-07-06T10:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T12:00:00+00:00',
        'price': 63.49,
        'start': '2025-07-06T11:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T13:00:00+00:00',
        'price': 91.64,
        'start': '2025-07-06T12:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T14:00:00+00:00',
        'price': 111.79,
        'start': '2025-07-06T13:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T15:00:00+00:00',
        'price': 234.04,
        'start': '2025-07-06T14:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T16:00:00+00:00',
        'price': 435.33,
        'start': '2025-07-06T15:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T17:00:00+00:00',
        'price': 431.84,
        'start': '2025-07-06T16:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T18:00:00+00:00',
        'price': 423.73,
        'start': '2025-07-06T17:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T19:00:00+00:00',
        'price': 437.92,
        'start': '2025-07-06T18:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T20:00:00+00:00',
        'price': 416.42,
        'start': '2025-07-06T19:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T21:00:00+00:00',
        'price': 414.39,
        'start': '2025-07-06T20:00:00+00:00',
      }),
      dict({
        'end': '2025-07-06T22:00:00+00:00',
        'price': 396.38,
        'start': '2025-07-06T21:00:00+00:00',
      }),
    ]),
  })
# ---
